<resources>
    <string name="app_name">KikiShop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="orders_to_send_label">Orders</string>
    <string name="orders_amount">0</string>
    <string name="items_to_send_label">items to send</string>
    <string name="items_amound">0</string>
    <string name="items">items</string>
    <string name="orders">orders</string>
    <string name="top_sell">Top Seller</string>
    <string name="top_s_img">top sale img</string>
    <string name="inventory">inventory</string>
    <string name="id">id:</string>
    <string name="name">name:</string>
    <string name="stock">stock:</string>
    <string name="sale">sale:</string>
    <string name="users">visitors:</string>
    <string name="contact">contact</string>
    <string name="pack">pack</string>
    <string name="send">send</string>
    <string name="newOreder">new</string>
    <string name="processed">processed</string>
    <string name="finish">finish</string>
    <string name="delivered">delivered</string>
</resources>